--- a/style.css
+++ b/style.css
@@ -27,10 +27,17 @@ body{
     animation: spin 3s linear infinite ;               
 }
 
+h2:hover{
+    background-color: blue;
+    border-color: black;
+    cursor: pointer;
+}
+
 h2{
     color: #03101e;
     background-color: #bdefbd;
     border-radius: 10px;
+    transition: 3s;
     
 }
 .section {
@@ -54,6 +61,12 @@ input[type="checkbox"]{
     margin-right: 10px;
 }
 
+h1:hover{
+    background-color: blue;
+    border-color: black;
+    cursor: pointer;
+}
+
 h1{
     background-color: rgb(135, 235, 215);
     height: 50px;
@@ -61,8 +74,15 @@ h1{
     text-align: center;
     margin : 20px auto;
     border-radius: 10px;
-    line-height: 50px;  
+    line-height: 50px; 
+    transition: 3s; 
     
+}
+
+.Date:hover{
+    background-color: blue;
+    border-color: black;
+    cursor: pointer;
 }
 
 .Date{
@@ -71,7 +91,14 @@ h1{
     border: 2px solid black;
     padding: 5px 10px;
     display: inline-block;
-    border-radius: 5px;   
+    border-radius: 5px;  
+    transition: 3s; 
+}
+
+.Day:hover{
+    background-color: blue;
+    border-color: black;
+    cursor: pointer;
 }
 
 .Day{
@@ -81,6 +108,7 @@ h1{
     padding: 5px 10px;
     display: inline-block;
     border-radius: 5px;
+    transition: 3s;
 }
 
 .border{
